--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <!-- Module Assignments -->
         <h3>Module Assignments</h3>
         <ul>
-            <li><a href="module-1/ColtonKohler_Mod1_3.html">Assignment 1.3</a></li>
-            <li><a href="module-2/ColtonKohler_Mod2_2.html">Assignment 2.2</a></li>
-            <li><a href="module-3/ColtonKohler_Mod3_3.html">Assignment 3.3</a></li>
+            <li><a href="module-1/Kohler_Mod1_3.html">Assignment 1.3</a></li>
+            <li><a href="module-2/Kohler_Mod2_2.html">Assignment 2.2</a></li>
+            <li><a href="module-3/Kohler_Mod3_3.html">Assignment 3.3</a></li>
         </ul>
 
         <!-- Projects Section -->
