--- a/module-8/Kohler_Mod8_2.html
+++ b/module-8/Kohler_Mod8_2.html
@@ -14,6 +14,13 @@
         <h1>Assignment 8.2: Build a Web Page - Part 6</h1>
     </header>
 
+    <!-- Navigation Bar -->
+    <div id="navbar">
+        <a href="../index.html">Home</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+    </div>
+
     <!-- Main Content Container -->
     <div id="container">
         
@@ -104,3 +111,4 @@
 
 </body>
 </html>
+
