--- a/module-6/Kohler_Mod6_2.html
+++ b/module-6/Kohler_Mod6_2.html
@@ -16,7 +16,7 @@
 
     <!-- Navigation Bar -->
     <div id="navbar">
-        <a href="#">Home</a>
+        <a href="../index.html">Home</a>
         <a href="#">About</a>
         <a href="#">Contact</a>
     </div>
