pushing updated bioSite link

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
         <!-- Projects Section -->
         <h3>Projects</h3>
         <ul>
-            <li><a href="">bioSite Project Home Page</a></li>
+            <li><a href="https://ckohler1.github.io/bioSite/hobbies.html">bioSite Project Home Page</a></li>
+
         </ul>
 
         <!-- Important Links -->
