--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <li><a href="module-8/Kohler_Mod8_2.html">Assignment 8.2</a></li>
             <li><a href="module-9/Kohler_Mod9_3.html">Assignment 9.3</a></li>
             <li><a href="module-10/Kohler_Mod10_3.html">Assignment 10.3</a></li>
+            <li><a href="module-11/Kohler_Mod11_2.html">Assignment 11.2</a></li>
         </ul>
 
         <!-- Projects Section -->
